# pyvo-fastapi-demo

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/pyvo_fastapi_demo/: __about__.py  __init__.py  dependencies.py  main.py  models.py
src/pyvo_fastapi_demo/routers/: sneks.py
tests/: test_sneks.py
